--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,4 +6,4 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: anchan828/setup-node-workflow@main
+      - uses: anchan828/setup-node-workflow@v1
